efs/basics/template.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Template to learn EFS basics

Parameters:
  ImageId:
    Description: AMI of Ubuntu
    Type: String
    Default: ami-0866a3c8686eaeeba

  DefaultSubnetId:
    Description: ID of default subnet, copied from console
    Type: String
    Default: subnet-0060293a2a154df33

Resources:
  ExampleInstanceSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Enable SSH access
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "22"
          ToPort: "22"
          CidrIp: "0.0.0.0/0"

  ExampleInstance:
    Type: "AWS::EC2::Instance"
    DependsOn:
      - ExampleMountTarget
    Properties:
      InstanceType: "t2.micro"
      ImageId: !Ref ImageId
      SecurityGroups:
        - !Ref ExampleInstanceSecurityGroup
      Tags:
        - Value: ExampleInstance
          Key: Name
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          # Install NFS client
          apt update
          apt install -y nfs-common
          # Create mount directory
          mkdir -p /mnt/efs
          # Mount the EFS
          mount -t nfs4 -o nfsvers=4.1 ${ExampleFileSystem}.efs.us-east-1.amazonaws.com:/ /mnt/efs
          # Add to fstab for persistence
          echo "${ExampleFileSystem}.efs.us-east-1.amazonaws.com:/ /mnt/efs nfs4 defaults,_netdev 0 0" >> /etc/fstab

  ExampleFileSystemSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupDescription: Allow EC2 instance to connect to EFS
      SecurityGroupIngress:
        - IpProtocol: "tcp"
          FromPort: "2049"
          ToPort: "2049"
          SourceSecurityGroupId: !GetAtt ExampleInstanceSecurityGroup.GroupId

  ExampleFileSystem:
    Type: "AWS::EFS::FileSystem"
    Properties:
      FileSystemTags:
        - Key: Name
          Value: ExampleFileSystem

  ExampleMountTarget:
    Type: AWS::EFS::MountTarget
    Properties:
      FileSystemId: !Ref ExampleFileSystem
      SubnetId: !Ref DefaultSubnetId
      SecurityGroups:
        - !GetAtt ExampleFileSystemSecurityGroup.GroupId

Outputs:
  InstanceId:
    Description: Instance ID
    Value: !GetAtt ExampleInstance.InstanceId

  InstancePublicIP:
    Description: Public IP address of Instance
    Value: !GetAtt ExampleInstance.PublicIp
